ci: update rpc for tests

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-RPC_TEST_URL="https://rpc.flashbots.net"
- 
+# An Ethereum RPC node is required to run the tests. You must use an Infura RPC node or a local node:
+# Create Infura API key: https://docs.infura.io/infura/getting-started#2.-create-an-api-key
+# Run a local node: https://ethereum.org/en/run-a-node/
+ETH_MAINNET_RPC="https://mainnet.infura.io/v3/<your-api-key>"
