--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,8 +13,5 @@
     "skipLibCheck": true,
     "emitDeclarationOnly": true
   },
-  "exclude": [
-    "dist",
-    "node_modules",
-  ]
+  "exclude": ["dist", "examples", "node_modules", "src/**/*.test.ts"]
 }
