--- a/package.json
+++ b/package.json
@@ -45,13 +45,13 @@
     "test": "vitest --coverage"
   },
   "devDependencies": {
-    "@vitest/coverage-c8": "^0.31.0",
+    "@vitest/coverage-v8": "^0.32.0",
     "abitype": "^0.8.6",
     "dotenv": "^16.0.3",
-    "esbuild": "^0.17.5",
-    "ethers": "^6.4.0",
+    "esbuild": "^0.18.0",
+    "ethers": "^6.5.0",
     "http-server": "^14.1.1",
-    "typescript": "^5.0.2",
-    "vitest": "^0.31.0"
+    "typescript": "^5.1.0",
+    "vitest": "^0.32.0"
   }
 }
