chore: update contributing guide

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# This is an .env.example file. You must rename it to .env and fill in the values.
 # An Ethereum RPC node is required to run the tests. You must use an Infura RPC node or a local node:
 # Create Infura API key: https://docs.infura.io/infura/getting-started#2.-create-an-api-key
 # Run a local node: https://ethereum.org/en/run-a-node/
