--- a/package.json
+++ b/package.json
@@ -37,8 +37,8 @@
   "scripts": {
     "start": "npm run build && cp ./dist ./public/dist",
     "build": "npm run build:cjs && npm run build:esm && npm run types",
-    "build:esm": "esbuild src/index.ts --bundle --minify-whitespace --minify-identifiers --format=esm --target=esnext --outfile=dist/index.esm.js",
-    "build:cjs": "esbuild src/index.ts --bundle --minify-whitespace --minify-identifiers --platform=node --target=node18 --outfile=dist/index.cjs.js",
+    "build:esm": "esbuild src/index.ts --bundle --minify-whitespace --minify-identifiers --format=esm --target=esnext --outfile=dist/index.esm.js --external:viem",
+    "build:cjs": "esbuild src/index.ts --bundle --minify-whitespace --minify-identifiers --platform=node --target=node18 --outfile=dist/index.cjs.js --external:viem",
     "build:dev": "npm run build:cjs:dev && npm run build:esm:dev && npm run types",
     "build:esm:dev": "esbuild src/index.ts --bundle --format=esm --outfile=dist/index.esm.js",
     "build:cjs:dev": "esbuild src/index.ts --bundle --platform=node --target=node18 --outfile=dist/index.cjs.js",
@@ -47,6 +47,9 @@
     "clean": "rm -rf dist",
     "test": "vitest --coverage --test-timeout=10000"
   },
+  "peerDependencies": {
+    "viem": "^1.9.3"
+  },
   "devDependencies": {
     "@vitest/coverage-v8": "^0.34.3",
     "abitype": "^0.9.8",
@@ -54,7 +57,6 @@
     "esbuild": "^0.19.2",
     "http-server": "^14.1.1",
     "typescript": "^5.2.2",
-    "viem": "^1.9.2",
     "vitest": "^0.34.3"
   }
 }
