docs: update README.md and CONTRIBUTING.md
[skip ci]

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,5 @@
-# This is an .env.example file. You must rename it to .env and fill in the values.
-# An Ethereum RPC node is required to run the tests. You must use an Infura RPC node or a local node:
-# Create Infura API key: https://docs.infura.io/infura/getting-started#2.-create-an-api-key
-# Run a local node: https://ethereum.org/en/run-a-node/
-ETH_MAINNET_RPC="https://mainnet.infura.io/v3/<your-api-key>"
+# This is an `.env.example` file. You must rename it to `.env` and fill in the values.
+# An Ethereum RPC node is required to run the tests. You can use an Alchemy RPC node or a local node:
+# Create an Alchemy API key: https://docs.alchemy.com/docs/alchemy-quickstart-guide
+# Or even better, run a local node: https://ethereum.org/en/run-a-node and use it's RPC URL.
+ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
