--- a/package.json
+++ b/package.json
@@ -45,18 +45,19 @@
     "types": "rm -rf ./dist/index.d.ts && tsc --emitDeclarationOnly --outDir ./dist",
     "web:example": "npm run clean && npm run build:dev && cp ./dist/index.esm.js ./examples/web && http-server ./examples/web --port 8000 -o",
     "clean": "rm -rf dist",
-    "test": "vitest --coverage --test-timeout=10000"
+    "test": "vitest --coverage"
   },
   "peerDependencies": {
-    "viem": "^1.18.6"
+    "viem": "^2.9.27"
   },
   "devDependencies": {
-    "@vitest/coverage-v8": "^0.34.6",
-    "abitype": "^0.10.2",
-    "dotenv": "^16.3.1",
-    "esbuild": "^0.19.5",
+    "@types/node": "^20.12.7",
+    "@vitest/coverage-v8": "^1.5.2",
+    "abitype": "^1.0.2",
+    "dotenv": "^16.4.5",
+    "esbuild": "^0.20.2",
     "http-server": "^14.1.1",
-    "typescript": "^5.2.2",
-    "vitest": "^0.34.6"
+    "typescript": "^5.4.5",
+    "vitest": "^1.5.2"
   }
 }
