--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "description": "🧾 Designed for 0x integrators: This library parses 0x transactions on EVM blockchains into a format that is both user-friendly and easy to understand.",
   "keywords": [
     "0x",
+    "dex",
     "logs",
     "swap",
-    "erc-20",
+    "parse",
+    "tokens",
     "events",
+    "gasless",
     "settler",
     "ethereum",
     "aggregator",
@@ -49,16 +52,16 @@
     "test": "vitest --coverage"
   },
   "peerDependencies": {
-    "viem": "^2.21.35"
+    "viem": "^2.21.54"
   },
   "devDependencies": {
-    "@types/node": "^22.8.1",
-    "@vitest/coverage-v8": "^2.1.3",
-    "abitype": "^1.0.6",
-    "dotenv": "^16.4.5",
+    "@types/node": "^22.10.1",
+    "@vitest/coverage-v8": "^2.1.8",
+    "abitype": "^1.0.7",
+    "dotenv": "^16.4.7",
     "esbuild": "^0.24.0",
     "http-server": "^14.1.1",
-    "typescript": "^5.6.3",
-    "vitest": "^2.1.3"
+    "typescript": "^5.7.2",
+    "vitest": "^2.1.8"
   }
 }
