feat: add fallback parsing for complex multi-hop transactions

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@
 # Create an Alchemy API key: https://docs.alchemy.com/docs/alchemy-quickstart-guide
 # Or even better, run a local node: https://ethereum.org/en/run-a-node and use it's RPC URL.
 ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
+
+# Base Mainnet RPC is required for Base chain tests
+# IMPORTANT: Must support debug_traceTransaction method (archive/debug node required)
+# Recommended providers that support debug_traceTransaction:
+#   - Alchemy (paid tier): https://base-mainnet.g.alchemy.com/v2/<your-api-key>
+#   - QuickNode (free trial available): https://your-endpoint.base.quiknode.pro/<your-key>/
+BASE_MAINNET_RPC="https://your-provider.base-mainnet.com/your-key"
+ALCHEMY_API_KEY="your-alchemy-api-key-here"
