fixes tests and updates documentation

--- a/.env.example
+++ b/.env.example
@@ -1,13 +1,14 @@
 # This is an `.env.example` file. You must rename it to `.env` and fill in the values.
-# An Ethereum RPC node is required to run the tests. You can use an Alchemy RPC node or a local node:
+
+# Required: Alchemy API key for Ethereum mainnet and various chain tests
 # Create an Alchemy API key: https://docs.alchemy.com/docs/alchemy-quickstart-guide
-# Or even better, run a local node: https://ethereum.org/en/run-a-node and use it's RPC URL.
+ALCHEMY_API_KEY="your-alchemy-api-key-here"
+
+# Required: Ethereum mainnet RPC
 ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
 
-# Base Mainnet RPC is required for Base chain tests
-# IMPORTANT: Must support debug_traceTransaction method (archive/debug node required)
-# Recommended providers that support debug_traceTransaction:
-#   - Alchemy (paid tier): https://base-mainnet.g.alchemy.com/v2/<your-api-key>
-#   - QuickNode (free trial available): https://your-endpoint.base.quiknode.pro/<your-key>/
-BASE_MAINNET_RPC="https://your-provider.base-mainnet.com/your-key"
-ALCHEMY_API_KEY="your-alchemy-api-key-here"
+# Required: QuickNode API keys for specific chain tests
+# Sign up at https://quicknode.com for free trial with debug method support
+QUICKNODE_BNB_CHAIN_API_KEY="your-quicknode-bnb-key"
+QUICKNODE_MANTLE_API_KEY="your-quicknode-mantle-key" 
+QUICKNODE_MODE_API_KEY="your-quicknode-mode-key"
