--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,10 @@
 # This is an `.env.example` file. You must rename it to `.env` and fill in the values.
-
-# Required: Alchemy API key for Ethereum mainnet and various chain tests
+# An Ethereum RPC node is required to run the tests. You can use an Alchemy RPC node or a local node:
 # Create an Alchemy API key: https://docs.alchemy.com/docs/alchemy-quickstart-guide
+# Or even better, run a local node: https://ethereum.org/en/run-a-node and use it's RPC URL.
+ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
 ALCHEMY_API_KEY="your-alchemy-api-key-here"
 
-# Required: Ethereum mainnet RPC
-ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
 
 # Required: QuickNode API keys for specific chain tests
 # Sign up at https://quicknode.com for free trial with debug method support
