remove firstTransfer logic when output is undefined & add more tests

--- a/.env.example
+++ b/.env.example
@@ -6,7 +6,7 @@ ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
 ALCHEMY_API_KEY="your-alchemy-api-key-here"
 
 
-# Required: QuickNode API keys for specific chain tests
+# Required: Quicknode API keys for specific chain tests
 # Sign up at https://quicknode.com for free trial with debug method support
 QUICKNODE_BNB_CHAIN_API_KEY="your-quicknode-bnb-key"
 QUICKNODE_MANTLE_API_KEY="your-quicknode-mantle-key" 
