feat: add last transfer heuristic for transactions which fail to parse (#93)

--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@
 # Create an Alchemy API key: https://docs.alchemy.com/docs/alchemy-quickstart-guide
 # Or even better, run a local node: https://ethereum.org/en/run-a-node and use it's RPC URL.
 ETH_MAINNET_RPC="https://eth-mainnet.g.alchemy.com/v2/<your-api-key>"
+ALCHEMY_API_KEY="your-alchemy-api-key-here"
+
+
+# Required: Quicknode API keys for specific chain tests
+# Sign up at https://quicknode.com for free trial with debug method support
+QUICKNODE_BNB_CHAIN_API_KEY="your-quicknode-bnb-key"
+QUICKNODE_MANTLE_API_KEY="your-quicknode-mantle-key" 
+QUICKNODE_MODE_API_KEY="your-quicknode-mode-key"
