fix: use quicknode provider for test on Abstract chain

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ ALCHEMY_API_KEY="your-alchemy-api-key-here"
 QUICKNODE_BNB_CHAIN_API_KEY="your-quicknode-bnb-key"
 QUICKNODE_MANTLE_API_KEY="your-quicknode-mantle-key" 
 QUICKNODE_MODE_API_KEY="your-quicknode-mode-key"
+QUICKNODE_ABSTRACT_API_KEY="your-quicknode-abstract-key"
